--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 
     <label for="pdesc">Product Description:</label>
     <textarea id="pdesc"></textarea>
-
+    <button type="button" onclick="validateForm()">Add Product</button>
     <button type="button" onclick="AddProduct()">Add Product</button>
     <button type="button" id="updateBtn" class="d-none" onclick="updateProduct()">Update Product</button>
     <label for="psearch">Search a Product</label>
     <input type="text" id="psearch">
+    <button type="button" onclick="searchProduct()">Search</button>
   </section>
 
   <section>
